# operator-cli

./: Cargo.toml
data/: always_success.deployment.toml  always_success.deployment.txt  capsule.toml  host.key  member1.key  member2.key  member3.key  member4.key  member5.key  operator-script  operator-script-deploy.recipe.txt  owner.key  room.json  validate_signature_rsa  validate_signature_rsa.deployment.toml  validate_signature_rsa.deployment.txt
src/: main.rs
