[package]
name = "operator-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-ref = { version = "0.3", default-features = false }
clap = { version = "3.1.9", features = ["derive"] }
secp256k1 = { version = "0.20", features = ["recovery"] }
lazy_static = "1.3.0"

rsa = {version ="0.6.1", features=["serde"]}
ckb-hash = "=0.103.0"
ckb-types = "=0.103.0"
ckb-jsonrpc-types = "=0.103.0"
ckb-sdk="=1.0.0"

hex = "0.4"
rand = "0.8.5"


serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"